--- a/_posts/2023-07-09-x-y-problem/x-y-problem.Rmd
+++ b/_posts/2023-07-09-x-y-problem/x-y-problem.Rmd
@@ -255,7 +255,7 @@ all.vars(parse(text = input))
 
 Me, knowing too many useless things (and knowing that the the user already has the best answers), suggested a quirky alternative:^[Actually I only thought of this because I'd been writing a statistical [package](https://yjunechoe.github.io/jlmerclusterperm/) that required some nasty metaprogramming with the formula object.]
 
-> This is super off-label usage but you can also use R's formula utilities to parse this:^[The significance of this solution building on top of R's formula utilities is that it will also parse stuff like `"a*b"` (as `c("a", "b", "a:b")`. So given that the inputs originated from R formulas (as the user later clarifies), this _is_ the principled approach.]
+> This is super off-label usage but you can also use R's formula utilities to parse this:^[The significance of this solution building on top of R's formula utilities is that it will also parse stuff like `"a*b"` as `c("a", "b", "a:b")`. So given that the inputs originated as R formulas (as the user later clarifies), this _is_ the principled approach.]
 
 ```{r fun-q-hack}
 attr(terms(reformulate(input)), "term.labels")
