--- a/index.Rmd
+++ b/index.Rmd
@@ -103,11 +103,11 @@ d-title p {
 
 <div class="about">
 
-I am a PhD candidate in [Linguistics at the University of Pennsylvania](https://live-sas-www-ling.pantheon.sas.upenn.edu/), and a student affiliate of [Penn MindCORE](https://mindcore.sas.upenn.edu/) and the [Language and Communication Sciences](https://web.sas.upenn.edu/lcs/) program. I am a psycholinguist broadly interested in experimental approaches to studying meaning, of various flavors. I use computational and behavioral methods to study how comprehenders process and represent linguistic ambiguity, both in real time and at different stages of language development. My advisor is Anna Papafragou and I am a member of the [Language & Cognition Lab](https://www.langcoglab.com/).
+I am a PhD candidate in [Linguistics at the University of Pennsylvania](https://live-sas-www-ling.pantheon.sas.upenn.edu/), and a student affiliate of [Penn MindCORE](https://mindcore.sas.upenn.edu/) and the [Language and Communication Sciences](https://web.sas.upenn.edu/lcs/) program. I am a psycholinguist broadly interested in experimental approaches to studying meaning, of various flavors. My advisor is Anna Papafragou and I am a member of the [Language & Cognition Lab](https://www.langcoglab.com/).
 
-I received my B.A. in Linguistics from Northwestern University, where I worked with [Jennifer Cole](https://sites.northwestern.edu/cole/), [Masaya Yoshida](https://faculty.wcas.northwestern.edu/~myo507/), and [Annette D'Onofrio](https://faculty.wcas.northwestern.edu/~akd2621/). I also worked as a research assistant for the [Language, Education, and Reading Neuroscience Lab](https://learnlab.northwestern.edu/). My [thesis](https://escholarship.org/uc/item/5d84n2x7) explored the role of prosodically-marked semantic focus in garden-path reanalysis.
+I received my B.A. in Linguistics from Northwestern University, where I worked with [Jennifer Cole](https://sites.northwestern.edu/cole/), [Masaya Yoshida](https://faculty.wcas.northwestern.edu/~myo507/), and [Annette D'Onofrio](https://faculty.wcas.northwestern.edu/~akd2621/). I also worked as a research assistant for the [Language, Education, and Reading Neuroscience Lab](https://learnlab.northwestern.edu/). My [thesis](https://escholarship.org/uc/item/5d84n2x7) explored the role of prosodic focus in garden-path reanalysis.
 
-Beyond linguistics research, I have interests in data visualization, science communication, and the R programming language. I actively develop ([ggtrace](https://yjunechoe.github.io/ggtrace/), [jlmerclusterperm](https://yjunechoe.github.io/jlmerclusterperm/)) and contribute to ([openalexR](https://github.com/ropensci/openalexR)) open source software and maintain a [technical blog](https://yjunechoe.github.io/blog.html) as a hobby. I also work as a data science tutor as part of a MindCORE program, and occasionally take on small statistical consulting projects.
+Beyond linguistics research, I have interests in data visualization, science communication, and the R programming language. I author [packages](/software.html) in statistical computing and graphics (ex: [ggtrace](https://yjunechoe.github.io/ggtrace/), [jlmerclusterperm](https://yjunechoe.github.io/jlmerclusterperm/)) and collaborate on other open-source software (ex: [openalexR](https://github.com/ropensci/openalexR), [pointblank](https://github.com/rstudio/pointblank)). I also maintain a [technical blog](https://yjunechoe.github.io/blog.html) as a hobby and occasionally take on small statistical consulting projects.
 
 </div>
 
