--- a/_posts/2023-12-31-2023-year-in-review/2023-year-in-review.Rmd
+++ b/_posts/2023-12-31-2023-year-in-review/2023-year-in-review.Rmd
@@ -42,9 +42,13 @@ All in all, I wrote **three blog posts** this year (not including this one). Thi
 
 ## R stuff
 
-I didn't think I'd have much to say about the R stuff I did this year until I sat down to write this blog. Even though this year was the busiest I've ever been with research, it turns out that I still ende up doing quite a bit of R stuff in my free time. I'll cover this chronologically.
+I didn't think I'd have much to say about the R stuff I did this year until I sat down to write this blog. Even though this year was the busiest I've ever been with research, it turns out that I still ended up doing quite a bit of R stuff in my free time. I'll cover this chronologically.
+
+<img src="https://yjunechoe.github.io/ggtrace/logo.png" style="width:20%;margin:1em auto;display:block;">
 
 At the beginning of the year, I was really lucky to receive the [student paper award](https://community.amstat.org/jointscsg-section/awards/student-paper-competition) from the [Statistical Computing and Graphics section of the ASA](https://community.amstat.org/jointscsg-section/home), writing about [{ggtrace}](https://yjunechoe.github.io/ggtrace/).^[Coincidentally, my girlfriend also won a student award this year from another ASA - the Acoustical Society of America.] In the [paper](https://yjunechoe.github.io/static/papers/Choe_2022_SublayerGG.pdf), I focused on `{ggtrace}` as a pedagogical tool for aspiring `{ggplot2}` extension developers. In the process, I rediscovered the power of **reframing ggplot internals as data wrangling** and went back to `{ggtrace}` to add a couple [convenience functions](https://yjunechoe.github.io/ggtrace/news/index.html#ggtrace-development-version-3) for interactive use-cases. After over two years since its inception, `{ggtrace}` now feels pretty complete in terms of its core features.
+
+<img src="https://yjunechoe.github.io/jlmerclusterperm/logo.png" style="width:20%;margin:1em auto;display:block;">
 
 In Spring, I began writing [{jlmerclusterperm}](https://yjunechoe.github.io/jlmerclusterperm/), a statistical package implementing the cluster-based permutation test for time series data, using mixed-effects models. This was a new challenge for me for two reasons. First, I wrote much of the package [in Julia](https://github.com/yjunechoe/jlmerclusterperm/tree/main/inst/julia/JlmerClusterPerm/src) - this was my first time writing Julia code for "production" and within an R package.^[I can't recommend `{JuliaConnectoR}` enough for this.] Second, I wrote this package for a seminar on eye movements that I was taking that Spring in the psychology department. I wrote `{jlmerclusterperm}` in an intense burst - most of it was complete by the end of May and I turned in the package as my final.^[I'm actually quite proud of myself for pulling this off - writing an R package for the final was unprecedented for the class.] I also gave a school-internal [talk](https://mindcore.sas.upenn.edu/calendar_event/ilst-seminar-students/) on it in April; my first time talking about R in front of an entirely academic audience.
 
@@ -52,7 +56,11 @@ In Summer, I continued polishing `{jlmerclusterperm}` with another ambitious goa
 
 At the beginning of Fall, I attended the [Advanced Frequentist stream](https://repsychling.github.io/SMLP2023/) of the [SMLP2023](https://vasishth.github.io/smlp2023/) workshop, taught by Phillip Alday, Reinhold Kliegl and Douglas Bates. The topic was **mixed-effects regression models in Julia**, one that I became very excited about especially after working on `{jlmerclusterperm}`. It was an absolute blast and I wish that everyone in linguistics/psychology research appreciated good stats/data analysis as much as the folks I met there. The workshop was far away in Germany (my first time ever in Europe!) and I'm really thankful to [MindCORE](https://mindcore.sas.upenn.edu/) for giving me a grant to help with travel expenses.
 
+<img src="https://docs.ropensci.org/openalexR/logo.png" style="width:20%;margin:1em auto;display:block;">
+
 For most of Fall, I didn't do much R stuff, especially with the start of the Fall semester and a big conference looming on the horizon. But the little time I did spend on it, I worked on maintenance and upkeep for `{openalexR}`, one of my few collaborative projects. It's also one of the few packages for which I'm an author of that I actually frequently use myself. I used `{openalexR}` a lot during the Fall semester for conducting literature reviews in preparation for my dissertation proposal, so I had a few opportunities to catch bugs and work on other improvements. I also spent a lot of my time in the Fall TA-ing for an [undergraduate data science class](https://kathrynschuler.com/datasci/) that we recently started offering in our department. This was actually my third year in a row TA-ing it, so it went pretty smoothly. I even learned some new [quirky R behaviors](https://fosstodon.org/@yjunechoe/111026163637396686) from my students along the way.
+
+<img src="https://rstudio.github.io/pointblank/reference/figures/logo.svg" style="width:20%;margin:1em auto;display:block;">
 
 In October, I virtually attended the [R/Pharma conference](https://rinpharma.com/) and joined a [workshop](https://github.com/rich-iannone/pointblank-workshop) on data validation using the `{pointblank}` package by [Rich Iannone](https://github.com/rich-iannone). I had used `{pointblank}` a little before, but I didn't explore its features much because I thought it had some odd behaviors that I couldn't comprehend. The workshop cleared up some of the confusion for me, and Rich made it clear in the workshop that he welcomed contributions to improve the package. So I [made a PR](https://github.com/rstudio/pointblank/pull/493) addressing the biggest pain point I personally had with using `{pointblank}`. This turned out to be a pretty big undertaking which took over a month to complete. In the process, I become a co-author of `{pointblank}`, and I merged a series of PRs that improved the consistency of function designs, among other things.
 
